# atomicl

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  benchmarks.py  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/plans/: README.md
docs/plans/ci-os-matrix/: PLAN.md
docs/plans/cython-dev-only/: PLAN.md
docs/plans/extension-build-hint/: PLAN.md
docs/plans/github-actions-migration/: PLAN.md
docs/plans/no-extensions-install/: PLAN.md
docs/plans/python-build-modernization/: PLAN.md
docs/plans/ruff-migration/: PLAN.md
docs/plans/stdatomic-migration/: PLAN.md
requirements/: benchmarking.txt  develop.txt  testing.txt
src/atomicl/: __init__.py  _atomic.c  _atomic.h  _catomic.pxd  _compat.py  _cy.pyx  _py.py  _structure.py
tests/: test_atomicl.py
